[package]
name = "chasm"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A roguelike game inspired by Caves of Qud"
repository = "https://github.com/yourusername/chasm"

[dependencies]
bevy = { version = "0.12", default-features = true }
rand = "0.8"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
noise = "0.9.0"
bevy_ecs_tilemap = "0.12"

[dev-dependencies]
bevy_editor_pls = "0.6"

# Enable high optimizations for dependencies in debug builds
[profile.dev.package."*"]
opt-level = 3

# Enable dynamic linking for faster compile times during development
[profile.dev]
opt-level = 1
debug = true
# Enable optimizations for release builds
[profile.release]
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce parallel code generation units for better optimization
opt-level = 3            # Maximum optimization level
strip = true             # Remove debug symbols

